avformat/hlsenc: copy metadata

Fixes Ticket2296

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>